fixed font
resume font was too small

--- a/css/style.css
+++ b/css/style.css
@@ -84,14 +84,14 @@
 }
 
 .page-content p{
-    font-size: 12px;
+    font-size: 14px;
 }
 .page-content h6{
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .page-content h5{
-    font-size: 15px;
+    font-size: 16px;
     font-style: italic;
 }
 
